--- a/siteExemplo/index.html
+++ b/siteExemplo/index.html
@@ -9,7 +9,9 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, similique? Vel animi dolor unde optio iste necessitatibus alias blanditiis, voluptate, incidunt ipsa recusandae expedita beatae provident tenetur laboriosam illo similique.
+    </p>
 
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, similique? Vel animi dolor unde optio iste necessitatibus alias blanditiis, voluptate, incidunt ipsa recusandae expedita beatae provident tenetur laboriosam illo similique.
     </p>
     
 </body>
