altera para aula
pequena alteração para o curso.dev

--- a/siteExemplo/index.html
+++ b/siteExemplo/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeio Site em repositório</title>
+    <style>
+        h1{
+            font-size: 18px;
+            color: blue;
+        }
+    </style>
 </head>
-<body>
-    <h1>Olá, Mundo</h1>
-    <hr>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, similique? Vel animi dolor unde optio iste necessitatibus alias blanditiis, voluptate, incidunt ipsa recusandae expedita beatae provident tenetur laboriosam illo similique.
-    </p>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, similique? Vel animi dolor unde optio iste necessitatibus alias blanditiis, voluptate, incidunt ipsa recusandae expedita beatae provident tenetur laboriosam illo similique.
-    </p>
+<body>
+    <h1>Oi, obrigado pela visita aagora vamos voltar a estudar hahahaha</h1>
     
 </body>
 </html>
