--- a/siteExemplo/index.html
+++ b/siteExemplo/index.html
@@ -8,12 +8,14 @@
         h1{
             font-size: 18px;
             color: blue;
+            background-color: blanchedalmond;
         }
     </style>
 </head>
 
 <body>
-    <h1>Oi, obrigado pela visita aagora vamos voltar a estudar hahahaha</h1>
+    <h1>Oi, obrigado pela visita!!<br>
+     Agora vamos voltar a estudar hahahaha por que esse curso está muito top</h1>
     
 </body>
 </html>
